config/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "mtls-peer-policy"
spec:
  mtls:
    mode: STRICT
