config/istio/membership-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: membership-route
spec:
  hosts:
  - "skripsi.lakik.software"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: membership-service
        port:
          number: 8080
