config/istio/rogue-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rogue-route
spec:
  hosts:
  - "skripsi.lakik.software"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        exact: /rogue
    route:
    - destination:
        host: rogue-service
        port:
          number: 8082
